--- a/docs/需求分析.md
+++ b/docs/需求分析.md
@@ -1,89 +1,52 @@
-# ClassWeaver Micro-Agents 需求分析
+# ClassWeaver 需求分析（V2）
 
-## 1. 项目概述
-ClassWeaver Micro-Agents 是一款“一站式”课前备课与测验生成工具。用户打开 Web 工作台即可上传资料、生成预习内容、发起测验，并查看自动化的辅导反馈。系统通过 Planner/ Rewriter/ Tutor 多代理协同，并结合知识库检索（RAG）提升输出质量。
+## 1. 项目目标
+- 提供“一站式”教学内容生成与课堂陪练，降低教师备课成本。
+- 支持自建知识库，确保生成内容与机构资料一致。
+- 全流程中文输出，适配中文课堂场景。
+- 可视化课程状态、行动建议和时间线，方便课堂执行与回溯。
 
-## 2. 目标与范围
-- **核心目标**
-  - 让教师/教研人员快速生成结构化预习内容（知识点、术语、测验、打印稿）。
-  - 允许上传教材或讲义构建私有知识库，从而让结果更可靠。
-  - 提供测验答题、评分和诊断，便于课堂前评估。
-- **范围**
-  - 后端：Django REST + Pipeline Orchestrator + RAG 服务。
-  - 前端：单一 Vue3 界面，内含生成、测验、打印、知识库几个入口。
-  - 数据：SQLite/PostgreSQL（可切换），向量库默认为 FAISS。
-  - 不包含：多租户账号体系、线上支付、第三方 LMS 集成。
+## 2. 角色与使用场景
+| 角色          | 主要目标                               | 核心操作                             |
+| ------------- | -------------------------------------- | ------------------------------------ |
+| 教师/教研     | 快速生成课程大纲、测验、练习与讲义     | 上传资料/文本 → 生成 → 测验/讲义    |
+| 助教/陪练     | 课堂陪练、记录事件、触发测验或打印     | 教练模式导航 → 记录事件/发起测验     |
+| 学生（选）    | 参与自测与课后练习                     | 进入测验 → 查看得分与回顾           |
 
-## 3. 用户与使用场景
-> 系统只有一个网页版工作台，教师或教研人员打开即可使用；学生在需要答题时也直接访问相同页面中的“开始测验”入口，无须区分“两个端”。
+## 3. 功能需求
+### 3.1 课程与测验
+- 文本/PPT 生成任务，可指定知识库 `doc_ids`。
+- 管道：Planner（知识点/测验草案）→ Rewriter（题目精炼）→ Tutor（练习与总结）。
+- 强制中文输出；状态轮询，完成后写入本地缓存并提示一次。
+### 3.2 知识库
+- 上传 TXT/PDF/DOCX/PPTX，切片向量化；列表/搜索。
+- 删除单个知识库、清空全部（默认库不可删）。
+- 前后端接口：`/api/kb/upload`、`/api/kb/search`、`/api/kb/documents`（GET/DELETE）、`/api/kb/documents/<doc_id>`（DELETE）。
+### 3.3 测验与评分
+- 根据课程生成测验会话；支持恢复（sessionStorage）。
+- 作答提交评分，返回得分、逐题详情、诊断。
+### 3.4 行动与时间线
+- AI 行动推荐，按 action_id 记录状态。
+- 时间线事件记录（Note/Practice/Question/Timeline），可绑定 action_id。
+### 3.5 教练与讲义
+- 教练模式按场景展示知识点、练习、时间线、测验入口。
+- 讲义打印：知识点、术语、测验题与解析、练习清单。
+### 3.6 历史与本地缓存
+- 保存最近一次任务与对话，支持查看/删除。
+- 去重播报：“课程已生成”同一任务只提示一次（sessionStorage）。
 
-| 角色/场景           | 主要目标                                               | 关键诉求                                               |
-|--------------------|--------------------------------------------------------|--------------------------------------------------------|
-| 教师 / 教研人员    | 导入教材 → 生成预习内容 → 检查知识点 → 输出打印稿     | 操作简单、结果可信、可见知识来源、可导出              |
-| 学生测验（扩展能力） | 使用教师分享的测验链接答题并收到诊断                 | 入口统一、流程明晰、即时反馈、鼓励话术                |
+## 4. 非功能需求
+- **性能**：生成/测验请求异步执行；前端轮询间隔 4s；列表和滚动区域限制高度防止长列表卡顿。
+- **兼容性**：Chrome/Edge 最新版；Node 18+/Python 3.10+。
+- **可维护性**：前后端分层清晰，提示模板集中于 `src/agents/prompts.py`；API 客户端集中于 `webapp/src/services/api.ts`。
+- **可国际化**：当前强制中文；保留英文键名方便后续 i18n。
 
-## 4. 功能需求
-### 4.1 核心流程
-1. **上传资料（可选）**：支持 `.txt/.pdf/.docx/.pptx`，自动切片和向量化。
-2. **生成预习内容**：从文本或 PPTX 启动，输出知识点、术语表、测验、打印包。
-3. **知识检索**：在前端直接输入关键词核对片段。
-4. **测验管理**：发起测验、查看题目、分享 session 给学生、接收评分。
-5. **打印导出**：预览打印页并通过浏览器输出 PDF。
+## 5. 约束与假设
+- 模型需支持按照 prompt/locale 返回中文；若模型忽略 locale，则需在后端进一步约束或更换模型。
+- 知识库依赖本地向量库（默认 FAISS）；切换向量存储需适配 `src/kb/store.py`。
+- 浏览器存储用于缓存；清理浏览器数据会清除本地历史与去重标记。
 
-### 4.2 系统能力
-| 模块       | 描述                                                         |
-|------------|--------------------------------------------------------------|
-| Pipeline   | 协调 Planner（初稿）、Rewriter（优化）、Tutor（辅导）       |
-| RAG        | 检索知识库片段，注入到 Prompt 中，增强回答准确性             |
-| Scoring    | 根据学生作答统计正确率和知识点掌握度                         |
-| Trace      | 记录每一个模型调用、耗时和 RAG 命中状态                     |
-
-## 5. 非功能需求
-- **性能**：单次生成控制在 30s 内；知识检索 < 1s（取决于向量库大小）。
-- **稳定性**：遇到嵌入或生成失败需返回可理解的错误；日志记录详尽。
-- **安全性**：API Key 仅保存在 `.env`；知识库文件不会上传到公共云。
-- **易用性**：界面引导清晰、错误提示友好、默认即可使用。
-- **可维护性**：模块化结构，pytest 提供基础回归保障。
-
-## 6. 约束与假设
-- 默认使用 SiliconFlow API，需保证网络连通。
-- 上传文件需要可提取文本，纯图片需用户自行 OCR。
-- FAISS 存储在本地 `data/`，若切换 pgvector 需自备 PostgreSQL。
-
-## 7. 关键用例
-```mermaid
-flowchart TD
-    U[用户] -->|上传资料| KB[知识库]
-    U -->|输入文本/PPT| Pipeline
-    Pipeline --> Planner
-    Pipeline --> Rewriter
-    Pipeline --> Tutor
-    Planner -->|引用| KB
-    Tutor -->|生成诊断| Result
-    U -->|知识检索/打印| Result
-```
-
-### UC-1 生成预习资料
-1. 用户粘贴课程文本或上传 PPT。
-2. 系统执行 pipeline 并返回完整包。
-3. 用户查看知识点、术语、测验、打印页。
-
-### UC-2 导入知识库
-1. 用户上传教材/讲义。
-2. 系统切片、嵌入、写入索引。
-3. 用户在现有界面检索验证。
-
-### UC-3 启动测验
-1. 用户点击“启动测验”。
-2. 获得 session_id 与题目列表。
-3. 分享 session_id；学生在同站点 `/take` 作答。
-
-## 8. 风险与对策
-| 风险                         | 对策                                                         |
-|------------------------------|--------------------------------------------------------------|
-| 模型返回格式不符合要求       | 使用 Pydantic 严格校验并在 Planner 添加字段自修正           |
-| 嵌入请求限流或失败           | 内置重试机制；提示用户检查 Key；必要时降低并发             |
-| 知识库文件过大               | 通过分块策略减小单次请求量；向用户提示拆分文件              |
-| 用户看不懂调试数据           | 默认展示，但计划新增“开发者模式”开关                      |
-
----
+## 6. 验收要点
+- 生成的课程、测验、练习默认中文，无英文残留。
+- 知识库删除/清空可正常工作，生成任务仅引用选定知识库。
+- 测验会话可恢复，教练/讲义可正常打开；“课程已生成”提示不重复。***
