--- a/docs/用户手册.md
+++ b/docs/用户手册.md
@@ -1,131 +1,46 @@
-# ClassWeaver Micro-Agents 用户手册
+# ClassWeaver 用户手册（V2）
 
-> 本手册面向日常使用者，重点介绍如何在浏览器中完成资料导入、预习内容生成、知识检索与测验操作。部署与配置说明放在文末附录。
+本手册面向日常使用者，介绍如何用 ClassWeaver 完成知识库管理、生成课程与测验、查看教练与讲义，以及常见操作注意事项。
 
-## 1. 使用概览
-- 访问地址：开发阶段默认 `http://127.0.0.1:5173/`。
-- 导航栏包含三个入口：
-  - `工作台`：所有生成与知识库操作都在此完成。
-  - `开始测验`：学生或教师输入测验编号即可作答。
-  - `打印资料`：查看并打印预习讲义。
-- 无需区分“教师端/学生端”——所有功能集中在同一应用中，只需根据业务选择对应入口。
+## 1. 入口与导航
+- 默认访问地址：`http://127.0.0.1:5173/`（开发环境）。
+- 顶部导航：
+  - **学习工作台**：生成课程/测验、查看状态、行动指南、时间线。
+  - **课堂教练**：按场景引导知识点、练习与测验。
+  - **进入测验**：直接作答已生成的测验。
+  - **打印讲义**：查看/打印课程讲义。
+  - **知识库**：上传/选择/删除知识库，搜索知识片段。
 
-## 2. 快速开始
-### 步骤 1（可选）：导入资料到知识库
-1. 打开首页底部的“导入资料并检索知识库”。
-2. 点击“步骤 1 · 导入资料”，选择 `.txt/.pdf/.docx/.pptx` 文件并上传。
-3. 上传成功会显示“切片数量：X”。若为 0，请先对扫描件做 OCR。
-4. 在“步骤 2 · 检索片段”输入关键词（如“深度学习 梯度”）验证是否命中。
+## 2. 基本流程
+1) **选择或上传知识库**  
+   在“知识库”页上传 `.txt/.pdf/.doc/.docx/.ppt/.pptx`，或在首页下拉框选择已有库。默认库不可删除。
+2) **生成课程与测验**  
+   - 在首页对话区输入课程意图或上传 PPT，点击“提交”。  
+   - 任务会携带选中的知识库 `doc_ids`，Pipeline 自动运行（Planner/ Rewriter/ Tutor）。
+3) **查看结果与行动**  
+   - 课程总览显示知识点、测验预览、行动指南、时间线。  
+   - 可直接“发起测验”“打印讲义”“进入陪学助教”或“记录教学事件”。
+4) **测验与回顾**  
+   - “进入测验”页面按题作答，提交后查看得分、知识点回顾。  
+   - 测验会话和题目缓存在 sessionStorage，刷新后可继续。
+5) **陪学教练**  
+   - 教练页按场景（热身/知识点/练习/测验/收尾）呈现导航，可直接开启测验或回到工作台。
+6) **打印讲义**  
+   - 打印页展示知识点/术语/题目/练习，点击“打印”即可生成纸质讲义。
+7) **历史记录**  
+   - 历史页展示最近一次任务与对话，可删除本地缓存（不会删除服务端任务）。
 
-### 步骤 2：生成预习资料
-1. **文本生成**：在左侧文本框粘贴课程大纲或教案，点击“生成”。
-2. **PPT 生成**：右侧选择 PPTX 文件上传。系统会自动提取文字。
-3. 生成过程中按钮显示“生成中…”，完成后页面顶部会出现成功提示。
+## 3. 知识库操作
+- **删除单个**：在“知识库”页点击对应库的“删除此知识库”（默认库不可删）。
+- **清空全部**：点击“清空全部知识库”删除所有非默认库。
+- **重新生成**：删除旧库后重新上传，再在首页新建对话生成课程，以确保内容只引用最新资料。
 
-### 步骤 3：查看与校验
-- **知识点/术语表**：在“最新生成”区域查看关键知识点、术语解释。
-- **测验预览**：自动展示前三题，可确认题干是否贴合需求。
-- **调试信息**：若想查看细节，可展开 JSON 预览了解 Planner/Final 输出。
-- **知识库引用**：如启用 RAG，可在“知识检索”区域检索相同关键词确认引用来源。
-
-### 步骤 4：发起测验
-1. 点击“启动测验”按钮。
-2. 系统返回 `session_id`（以及题目列表），可复制分享给学生。
-3. 学生在同一站点的“开始测验”页面输入 `session_id` 即可答题。
-4. 提交后系统给出正确率、知识点诊断和 Tutor 补充练习。
-
-### 步骤 5：打印资料
-1. 在“最新生成”区域点击“打印资料”，或直接进入导航栏的“打印资料”。
-2. 浏览器使用 `Ctrl+P`（或 `Cmd+P`）导出 PDF，建议启用“打印背景图形”选项以保留样式。
-
-## 3. 界面速览
-| 区域                     | 功能说明                                                                 |
-|--------------------------|--------------------------------------------------------------------------|
-| 顶部步骤提示             | 提醒生成流程：输入内容 → 生成结果 → 启动测验/打印。                     |
-| “从文本生成”             | 粘贴文字后点击生成，实时显示字数。                                       |
-| “从 PPTX 生成”           | 选择 PPTX 上传并触发生成。                                               |
-| 最新任务卡片             | 展示任务编号、状态、耗时、知识点、术语、测验预览及 Trace。               |
-| 导入资料并检索知识库     | 按顺序上传资料、查看上传反馈、立即检索验证片段。                         |
-| JSON 调试视图            | 提供 Planner/Final/Tutor 的原始 JSON（面向开发者，可后续折叠/隐藏）。     |
-
-## 4. 功能详解
-### 4.1 知识库管理
-- **上传提示**：成功显示绿色消息；若切片 0，说明文件内容无法提取。
-- **检索空态**：未检索过时提示“上传资料后可在此检索片段”；输入关键词但无结果时提示更换关键词或导入更多资料。
-- **常见问题**
-  - 提示 `Exceeded maximum retries for embedding`：检查网络或 API Key；可能由于限流/余额不足导致嵌入失败。
-  - 上传大文件：建议拆分或先压缩文本内容，再逐个上传。
-
-### 4.2 生成预习资料
-- **重试**：若生成失败，界面会提示错误原因，可调整输入后再次点击生成。
-- **历史任务恢复**：页面加载时会尝试恢复上一次成功生成的任务，方便继续操作。
-- **RAG 确认**：在“调试 Trace”中可看到 `rag.enabled: true/false` 和引用片段的 `doc_id`。
-
-### 4.3 测验管理
-- 启动测验后，`session_id` 会保存到浏览器会话存储，刷新仍可从“开始测验”入口继续。
-- 测验诊断包括知识点掌握统计、复习建议、Tutor 给出的补充练习。
-
-### 4.4 打印与导出
-- 打印页面使用响应式布局，确保 A4 纸宽度友好。
-- 当前版本主要依赖浏览器打印；若需高清 PDF，可使用 Chrome 或 Edge 并选取“保存为 PDF”。
+## 4. 重要提示
+- **中文输出**：所有 Agent 强制中文；若仍出现英文，请清空知识库并重启后端加载最新代码，再重新生成。
+- **重复提醒**：同一任务的“课程已生成”提示只会出现一次；如仍重复，清空浏览器 sessionStorage。
+- **缓存位置**：任务/对话存于 localStorage，测验会话与提示去重标记存于 sessionStorage；需要重置时可手动清理浏览器存储。
 
 ## 5. 常见问题
-| 问题                                 | 处理建议                                                         |
-|--------------------------------------|------------------------------------------------------------------|
-| 上传成功但切片数为 0                 | 先检查文件能否复制文本，如不能请 OCR；也可转换为 DOCX/TXT。     |
-| 生成提示模型格式错误                 | 重新生成；如频繁出现，可在“知识检索”核对资料或缩短输入文本。    |
-| 知识检索提示暂无结果                 | 可能知识库为空或关键词不匹配；使用更具体的词或重新上传资料。    |
-| 测验学生端打不开                     | 确认前端服务是否运行；若使用构建版本，确保静态文件部署到服务器。 |
-| `pytest` 找不到模块                  | 激活虚拟环境后执行，或检查 `pytest.ini` 和 `tests/conftest.py` 是否存在。 |
-
-## 6. 附录 A：部署与配置
-### A.1 环境准备
-- Python 3.11/3.12、Node.js ≥ 18、Git。
-- （可选）FAISS/pgvector 对应依赖。
-
-### A.2 安装步骤
-```bash
-git clone <repo-url>
-cd classweaver-microagents
-
-python -m venv .venv
-.\.venv\Scripts\Activate.ps1   # Windows
-source .venv/bin/activate      # macOS/Linux
-
-pip install -r requirements.txt
-copy .env.example .env  # Windows (macOS 使用 cp)
-python manage.py migrate
-
-cd webapp
-npm install
-cd ..
-```
-
-### A.3 运行
-```bash
-# 后端
-python manage.py runserver
-
-# 前端
-cd webapp
-npm run dev
-```
-
-### A.4 构建与测试
-```bash
-python -m pytest      # 运行单元测试
-cd webapp && npm run build  # 生成前端产物
-```
-
-## 7. 附录 B：配置项速查
-| 变量                     | 示例值                                 | 说明                                   |
-|--------------------------|----------------------------------------|----------------------------------------|
-| `BASE_URL`               | `https://api.siliconflow.cn/v1`        | 模型服务地址                           |
-| `API_KEY`                | `sk-xxxx`                              | 安全起见请勿提交至仓库                 |
-| `EMBEDDING_MODEL`        | `BAAI/bge-m3`                          | 嵌入模型名称                           |
-| `VECTOR_BACKEND`         | `faiss`                                | 支持 `faiss`（默认）或 `pgvector`     |
-| `VSTORE_PATH`            | `data/faiss.index`                     | 向量索引文件路径                       |
-| `VSTORE_META`            | `data/chunks.jsonl`                    | 向量元数据文件                         |
-| `FRONTEND_ORIGIN`        | `http://127.0.0.1:5173`                | 供 CORS 校验使用                       |
-
----
+- **生成未使用选定知识库**：确保首页已切换到目标库后再点击“提交”；旧任务不会自动更新。
+- **无法删除知识库**：默认库不可删除；其他库可单删或“清空全部知识库”。
+- **后端返回英文或报错**：确认后端已重启并安装完依赖（`pip install -r requirements.txt`），模型需支持 `locale=zh-CN`。***
