--- a/docs/详细设计.md
+++ b/docs/详细设计.md
@@ -1,147 +1,68 @@
-# ClassWeaver Micro-Agents 详细设计
+# ClassWeaver 详细设计（V2）
 
-## 1. 软件体系结构
-### 1.1 架构总览
-系统采用“单页应用 + REST API + 多 Agent Pipeline”的分层结构：
+## 1. 架构概览
+- **前端**：Vue3 + Vite + Tailwind。页面：Home（工作台）、Knowledge、Coach、Take、Print、History。跨页状态通过 localStorage/sessionStorage 与 URL state 维持。
+- **后端**：Django REST Framework。主要模块：
+  - `src/agents/`：Planner / Rewriter / Tutor 多智能体逻辑与提示。
+  - `src/services/`：流水线 orchestrator、打印生成、推荐、评分、PPT 解析、知识检索。
+  - `src/kb/`：知识上传、切片、向量存储（FAISS）。
+  - `src/api/`：REST 视图与序列化，涵盖预课任务、知识库、测验、时间线、推荐。
+- **存储**：关系型数据库（PrestudyJob、LessonPlan、KnowledgeDocument/Chunk 等）+ 向量库（FAISS）。
 
-```mermaid
-graph LR
-    subgraph Frontend[Vite + Vue3]
-        Home[HomeView.vue] --> APIClient
-        Nav --> Home
-        Nav --> QuizView
-        Nav --> PrintView
-    end
+## 2. 后端模块
+### 2.1 Agents
+- **Planner**：根据用户文本/PPT 和 RAG 结果生成知识点、术语、测验草案；提示中强制中文输出。校验模型输出（Pydantic），补全空缺选项文案。
+- **Rewriter**：精炼测验题目与选项，保持答案不变；用户 prompt 前置中文要求。
+- **Tutor**：生成练习、回顾与跟进问题；同样强制中文。
+- **Pipeline**：在 `services/pipeline.py` 中协调多个 Agent，写入 `PrestudyJob` 结果、打印数据。
 
-    APIClient -->|REST| Backend[DRF API]
+### 2.2 API 层
+- `prestudy/from-text|from-ppt`：创建任务，入参可包含 `doc_ids`，作业入队，返回 JobTicket。
+- `prestudy/<id>`：返回最终结果与 printable。
+- `jobs/<id>`：轮询任务状态。
+- `quiz/start|submit`：按现有 Job 生成测验会话与评分。
+- `kb/upload|search|documents`：知识库上传、检索、列出；`DELETE /api/kb/documents/<doc_id>/` 或 `DELETE /api/kb/documents/` 支持删除单个或清空。
+- `lesson/<plan_id>/timeline|events`：时间线查询与事件记录。
+- `recommendations/`：行动推荐。
 
-    subgraph Backend[Django + Services]
-        Backend --> PrestudyAPI
-        Backend --> QuizAPI
-        Backend --> KBAPI
-        PrestudyAPI --> Pipeline
-        Pipeline --> Planner
-        Pipeline --> Rewriter
-        Pipeline --> Tutor
-        Pipeline --> RAG[Retriever]
-        KBAPI --> Ingest
-        Ingest --> Store
-        QuizAPI --> Scoring
-    end
+### 2.3 服务层
+- **printable**：从 `final_json` 生成可打印结构。
+- **ppt**：解析 PPTX，提取文本与图片。
+- **recommendation**：根据测验/课程生成行动建议。
+- **scoring**：测验评分，统计得分与详细正确性。
 
-    Store -->|向量检索| RAG
-    Store --> DB[(KnowledgeDocument & Chunk)]
-```
+## 3. 前端设计
+- **HomeView**：核心工作台，包含对话、上传、状态、行动指南、时间线、知识点/测验预览；对话记录、任务状态、提示去重存储于 localStorage/sessionStorage。
+- **KnowledgeView**：知识库上传/选择/搜索，新增删除单个与清空按钮。
+- **CoachView**：基于课程结果与时间线生成场景导航，可一键发起测验或返回工作台。
+- **TakeView**：测验答题与结果展示，会话与题目存于 sessionStorage，支持恢复。
+- **PrintView**：打印知识点/术语/测验/练习。
+- **HistoryView**：展示最近任务与对话，可本地清空。
+- **API 客户端**：`webapp/src/services/api.ts` 统一注入 `Accept-Language: zh-CN`、locale 以及知识库删除接口。
 
-### 1.2 模块说明
-- **API 层（DRF）**：位于 `src/api/views.py`，负责接收请求、调用服务、返回 JSON。
-- **Pipeline 服务**：`src/services/pipeline.py` 协调文本提取、RAG 检索、Agent 调用。
-- **Agents**：`src/agents/` 下定义 Planner/ Rewriter/ Tutor，统一使用 `OpenAIClient`。
-- **知识库服务**：`src/kb/ingest.py` 负责切片与嵌入，`src/kb/retrieve.py` 负责检索。
-- **评分服务**：`src/services/scoring.py` 处理测验评分与诊断。
-- **前端视图**：`webapp/src/views/`，其中 `HomeView.vue` 集成全部教师常用功能，导航栏附带“开始测验”“打印资料”入口。
+## 4. 数据模型（核心）
+- `PrestudyJob`：状态、源文本/PPT、planner_json/final_json、lesson_plan 关联。
+- `LessonPlan`：课程结构、笔记；关联 `LessonEvent` 时间线。
+- `KnowledgeDocument` / `KnowledgeChunk`：知识库及切片与向量。
+- `QuizSession` / `QuizAnswer`：测验会话与结果记录。
 
-### 1.3 时序流程（预习生成）
-```mermaid
-sequenceDiagram
-    participant User
-    participant UI as HomeView
-    participant API as /api/prestudy/text
-    participant Pipe as Pipeline
-    participant KB as retrieve
-    participant Planner
-    participant Rewriter
-    participant Tutor
+## 5. 流程时序（简述）
+1) 前端提交文本/PPT + doc_ids → `/api/prestudy/...` → 创建 Job → 入队执行。
+2) Pipeline 调用 Planner/RAG → Rewriter → Tutor → 持久化（final_json/printable/lesson_plan）。
+3) 前端轮询 `/api/jobs/<id>` → 完成后拉取 `/api/prestudy/<id>`，写入本地存储，播报一次系统消息。
+4) 测验：`/api/quiz/start` 生成会话 → 前端答题 → `/api/quiz/submit` 评分。
+5) 行动与时间线：`/api/recommendations` 获取建议；`/api/lesson/<plan>/events/` 记录事件、同步状态。
 
-    User->>UI: 输入文本 / 上传 PPT
-    UI->>API: POST 请求
-    API->>Pipe: run_pipeline(job, text/ppt)
-    Pipe->>KB: RAG 检索
-    KB-->>Pipe: rag_chunks
-    Pipe->>Planner: generate_plan
-    Planner-->>Pipe: planner_json
-    Pipe->>Rewriter: rewrite_quiz
-    Rewriter-->>Pipe: final_json
-    Pipe->>Tutor: build_tutor_response
-    Tutor-->>Pipe: tutor_payload
-    Pipe-->>API: 汇总结果
-    API-->>UI: 返回 planner/final/printable
-```
+## 6. 中文化与去重策略
+- Agent 提示和用户 prompt 强制说明“所有文本使用简体中文”。
+- 前端请求默认 `Accept-Language: zh-CN`，并在关键接口传递 `locale: "zh-CN"`。
+- “课程已生成”提示通过 sessionStorage 记录已播报 job_id，避免重复。
 
-## 2. 数据结构设计
-### 2.1 ORM 模型
-| 模型              | 关键字段                                                         |
-|-------------------|------------------------------------------------------------------|
-| `PrestudyJob`     | `source_type`, `source_excerpt`, `planner_json`, `final_json`, `status`, `duration_ms`, `model_trace` |
-| `QuizSession`     | `job`, `session_id`, `questions_snapshot`, `started_at`, `ended_at` |
-| `QuizAnswer`      | `session`, `question_id`, `answer`, `correct`, `kp_ids`, `used_variant` |
-| `KnowledgeDocument` | `doc_id`, `title`, `source_path`, `metadata`                   |
-| `KnowledgeChunk`  | `document`, `chunk_id`, `text`, `embedding`, `metadata`           |
+## 7. 依赖与环境
+- 后端：Python 3.10+，Django/DRF，Pydantic，FAISS（或替代向量库），OpenAI/Qwen/DeepSeek SDK。
+- 前端：Node 18+，Vite 5，Vue 3，Tailwind。
 
-### 2.2 Pydantic 模型
-- `PlannerResponse`：保证 Planner 输出结构化。
-- `PlannerQuizItem`：新增 `normalize_refs` 字段校验，兼容字符串引用。
-- `TutorResponse`：包含 `summary`、`practice`、`followups`。
-
-### 2.3 向量存储
-- 默认 `FaissStore`（`IndexFlatIP`），向量持久化于 `data/faiss.index`，元数据保存至 `data/chunks.jsonl`。
-- 提供 `upsert_embeddings` 以适配 ingestion。
-- 若启用 `pgvector`（未来扩展），需实现同样接口。
-
-## 3. 界面设计
-### 3.1 导航结构
-`webapp/src/App.vue` 提供顶部导航：
-- `工作台`：默认首页。
-- `开始测验`：跳转 `/take`。
-- `打印资料`：跳转 `/print`。
-
-### 3.2 主要页面
-| 页面/组件             | 功能要点                                                   |
-|-----------------------|------------------------------------------------------------|
-| `HomeView.vue`        | 文本生成、PPT 生成、最新任务详情、知识库上传/检索         |
-| `QuizTakeView.vue`    | 学生输入 session 开始答题                                  |
-| `PrintView.vue`       | 渲染打印友好的预习资料                                     |
-| `JsonPreview.vue`     | 以折叠方式展示调试 JSON（后续可加入开发者模式开关）        |
-
-### 3.3 UI 状态
-- 上传知识库：通过 `kbStatus` 与 `knowledgeEmptyMessage` 提示成功/失败。
-- 生成状态：`isGenerating` `generationSource` 控制按钮和文案。
-- 测验：`isStartingQuiz` 防止重复点击。
-
-## 4. 算法流程
-| 算法/函数                    | 说明                                                         |
-|-----------------------------|--------------------------------------------------------------|
-| `_chunk_text`               | 固定大小切片 + 重叠，保证上下文连贯                         |
-| `OpenAIClient.embed`        | 内置最多 `max_retries` 次重试，失败抛出统一异常              |
-| `retrieve_context`          | 对 Query embedding，使用 FAISS top-k 检索，返回标准字段      |
-| `score_quiz`                | 计算正确率、知识点命中、出具评估摘要                        |
-| `normalize_refs`（Planner） | 将字符串引用转换为 `{doc_id, chunk_id}`，忽略非法值         |
-
-## 5. 接口设计（摘要）
-| 方法 | 路径                        | 描述                                  |
-|------|-----------------------------|---------------------------------------|
-| POST | `/api/prestudy/text/`       | 从文本生成预习资料                    |
-| POST | `/api/prestudy/ppt/`        | 从 PPTX 生成预习资料                  |
-| GET  | `/api/prestudy/{job_id}/`   | 查询任务详情                          |
-| POST | `/api/kb/upload/`           | 上传知识库文档                        |
-| POST | `/api/kb/search/`           | 检索知识片段                          |
-| POST | `/api/quiz/start/`          | 启动测验并返回 session                |
-| POST | `/api/quiz/submit/`         | 提交答题并返回评分/诊断               |
-
-## 6. 日志与监控
-- `logging` 记录 ingest、RAG、Agent 调用失败等信息。
-- `model_trace` 保存模型调用延迟与 rag 状态，可用于前端调试。
-- 计划扩展：将 `model_trace` 写入 `LlmCallLog`，便于审计与分析。
-
-## 7. 测试与质量
-- pytest 覆盖：序列化、评分、Planner refs、JSON 解析。
-- `pytest.ini` / `tests/conftest.py` 保证 `src` 可被导入。
-- 建议在 CI 中运行 `python -m pytest`；前端可补充 Vitest。
-
-## 8. 扩展方向
-- 后台 UI 增加“知识库管理”“开发者模式”切换。
-- 支持异步队列（Celery）处理重任务或批量生成。
-- 引入模型健康监控/重试策略可配置化。
-- 提供课程模板与多语言支持。
-
----
+## 8. 测试与验证
+- 前端：`npm run build`（已通过）验证构建。
+- 后端：`pytest -q`（当前环境缺少 Django/DRF/openai 依赖会报错；需安装 requirements 后运行）。
+- 建议补充：知识库删除接口的集成测试、Pipeline 中文化回归用例、Action/Timeline 状态持久化单测。***
