--- a/docs/用户手册.md
+++ b/docs/用户手册.md
@@ -1,46 +1,39 @@
-# ClassWeaver 用户手册（V2）
+# ClassWeaver 用户手册（V3）
 
-本手册面向日常使用者，介绍如何用 ClassWeaver 完成知识库管理、生成课程与测验、查看教练与讲义，以及常见操作注意事项。
+本手册面向日常使用者，介绍如何管理知识库、生成课程与测验、使用时间线与讲义，以及常见问题。
 
-## 1. 入口与导航
-- 默认访问地址：`http://127.0.0.1:5173/`（开发环境）。
-- 顶部导航：
-  - **学习工作台**：生成课程/测验、查看状态、行动指南、时间线。
-  - **课堂教练**：按场景引导知识点、练习与测验。
-  - **进入测验**：直接作答已生成的测验。
-  - **打印讲义**：查看/打印课程讲义。
-  - **知识库**：上传/选择/删除知识库，搜索知识片段。
+## 1. 登录与入口
+- 开发环境入口：`http://127.0.0.1:5173/`
+- 登录/注册后进入“学习工作台”。会话基于 Cookie+CSRF；刷新不会丢失登录缓存，接口 401 会提示重新登录。
 
-## 2. 基本流程
+## 2. 基础流程
 1) **选择或上传知识库**  
-   在“知识库”页上传 `.txt/.pdf/.doc/.docx/.ppt/.pptx`，或在首页下拉框选择已有库。默认库不可删除。
-2) **生成课程与测验**  
-   - 在首页对话区输入课程意图或上传 PPT，点击“提交”。  
-   - 任务会携带选中的知识库 `doc_ids`，Pipeline 自动运行（Planner/ Rewriter/ Tutor）。
-3) **查看结果与行动**  
-   - 课程总览显示知识点、测验预览、行动指南、时间线。  
-   - 可直接“发起测验”“打印讲义”“进入陪学助教”或“记录教学事件”。
-4) **测验与回顾**  
-   - “进入测验”页面按题作答，提交后查看得分、知识点回顾。  
-   - 测验会话和题目缓存在 sessionStorage，刷新后可继续。
-5) **陪学教练**  
-   - 教练页按场景（热身/知识点/练习/测验/收尾）呈现导航，可直接开启测验或回到工作台。
+   在“知识库”页创建知识库，上传 `.txt/.pdf/.docx/.pptx`。默认库不可删除。
+2) **生成课程/测验**  
+   在首页选择知识库，输入课程意图或上传 PPT，点击提交。系统调用 Planner/Rewrite/Tutor，生成知识点、测验、练习、讲义。
+3) **查看与行动**  
+   课程总览展示知识点、测验预览、行动指南、时间线。可发起测验、打印讲义、进入教练模式或记录事件。
+4) **测验与评分**  
+   进入测验页答题，提交后查看得分与诊断。测验会话与题目保存在 sessionStorage，刷新可恢复。
+5) **时间线与拖拽**  
+   时间线为单列滚动区，支持拖拽事件调整顺序，卡片整块移动；事件可绑定行动状态。
 6) **打印讲义**  
-   - 打印页展示知识点/术语/题目/练习，点击“打印”即可生成纸质讲义。
-7) **历史记录**  
-   - 历史页展示最近一次任务与对话，可删除本地缓存（不会删除服务端任务）。
+   打印视图包含知识点、术语、题目与练习，点击“打印”即可生成纸质版。
+7) **历史**  
+   历史页可查看最近任务与对话，支持本地清除（不影响服务器数据）。
 
 ## 3. 知识库操作
-- **删除单个**：在“知识库”页点击对应库的“删除此知识库”（默认库不可删）。
-- **清空全部**：点击“清空全部知识库”删除所有非默认库。
-- **重新生成**：删除旧库后重新上传，再在首页新建对话生成课程，以确保内容只引用最新资料。
+- 选择库：在首页或知识库页选择当前库，后续生成/检索仅使用该库。
+- 上传：支持多文件批量上传；状态会显示“上传完成，共 N 份资料”。
+- 搜索：输入关键字检索当前库片段；返回文本、来源与相似度。
+- 删除：删除单个库（默认库不可删）或“清空全部”删除所有非默认库。
 
-## 4. 重要提示
-- **中文输出**：所有 Agent 强制中文；若仍出现英文，请清空知识库并重启后端加载最新代码，再重新生成。
-- **重复提醒**：同一任务的“课程已生成”提示只会出现一次；如仍重复，清空浏览器 sessionStorage。
-- **缓存位置**：任务/对话存于 localStorage，测验会话与提示去重标记存于 sessionStorage；需要重置时可手动清理浏览器存储。
+## 4. 常见问题
+- **检索不到内容**：确认已选择正确的知识库且文档上传成功；必要时清理索引文件并重新上传。
+- **被踢到登录页**：会话过期或接口 401 时会清理缓存并要求重新登录，重新登录后继续操作即可。
+- **测验丢失**：测验会话存在 sessionStorage，若清理浏览器数据需重新发起测验。
+- **打印不全**：先等待课程生成完成，再进入打印页；如仍有缺失，刷新后重试。
 
-## 5. 常见问题
-- **生成未使用选定知识库**：确保首页已切换到目标库后再点击“提交”；旧任务不会自动更新。
-- **无法删除知识库**：默认库不可删除；其他库可单删或“清空全部知识库”。
-- **后端返回英文或报错**：确认后端已重启并安装完依赖（`pip install -r requirements.txt`），模型需支持 `locale=zh-CN`。***
+## 5. 浏览器存储
+- localStorage：任务、对话、去重提示。
+- sessionStorage：测验会话、已播报任务、登录缓存。清理浏览器数据会移除这些缓存。***
