--- a/docs/需求分析.md
+++ b/docs/需求分析.md
@@ -1,52 +1,32 @@
-# ClassWeaver 需求分析（V2）
+# ClassWeaver 需求分析（V3）
 
-## 1. 项目目标
-- 提供“一站式”教学内容生成与课堂陪练，降低教师备课成本。
-- 支持自建知识库，确保生成内容与机构资料一致。
-- 全流程中文输出，适配中文课堂场景。
-- 可视化课程状态、行动建议和时间线，方便课堂执行与回溯。
+## 1. 目标
+- 为中文课堂提供“一站式”备课与陪练：生成课程大纲、测验、练习、讲义。
+- 允许教师使用自有资料（知识库）驱动生成，确保内容贴合机构/课程。
+- 提供可视化时间线与行动指南，帮助课堂执行与回顾。
 
-## 2. 角色与使用场景
-| 角色          | 主要目标                               | 核心操作                             |
-| ------------- | -------------------------------------- | ------------------------------------ |
-| 教师/教研     | 快速生成课程大纲、测验、练习与讲义     | 上传资料/文本 → 生成 → 测验/讲义    |
-| 助教/陪练     | 课堂陪练、记录事件、触发测验或打印     | 教练模式导航 → 记录事件/发起测验     |
-| 学生（选）    | 参与自测与课后练习                     | 进入测验 → 查看得分与回顾           |
+## 2. 角色与场景
+| 角色        | 主要目标                             | 核心操作                                   |
+| ----------- | ------------------------------------ | ------------------------------------------ |
+| 教师/教研   | 快速生成大纲、测验、练习与讲义       | 上传资料 → 生成 → 测验/讲义/行动         |
+| 助教/陪练   | 课堂陪练、记录事件、触发测验或打印   | 教练模式导航 → 记录事件/发起测验/打印     |
+| 学生（可选) | 自测与回顾                           | 进入测验 → 查看得分与讲义                 |
 
 ## 3. 功能需求
-### 3.1 课程与测验
-- 文本/PPT 生成任务，可指定知识库 `doc_ids`。
-- 管道：Planner（知识点/测验草案）→ Rewriter（题目精炼）→ Tutor（练习与总结）。
-- 强制中文输出；状态轮询，完成后写入本地缓存并提示一次。
-### 3.2 知识库
-- 上传 TXT/PDF/DOCX/PPTX，切片向量化；列表/搜索。
-- 删除单个知识库、清空全部（默认库不可删）。
-- 前后端接口：`/api/kb/upload`、`/api/kb/search`、`/api/kb/documents`（GET/DELETE）、`/api/kb/documents/<doc_id>`（DELETE）。
-### 3.3 测验与评分
-- 根据课程生成测验会话；支持恢复（sessionStorage）。
-- 作答提交评分，返回得分、逐题详情、诊断。
-### 3.4 行动与时间线
-- AI 行动推荐，按 action_id 记录状态。
-- 时间线事件记录（Note/Practice/Question/Timeline），可绑定 action_id。
-### 3.5 教练与讲义
-- 教练模式按场景展示知识点、练习、时间线、测验入口。
-- 讲义打印：知识点、术语、测验题与解析、练习清单。
-### 3.6 历史与本地缓存
-- 保存最近一次任务与对话，支持查看/删除。
-- 去重播报：“课程已生成”同一任务只提示一次（sessionStorage）。
+- 课程生成：文本/PPT 输入，流水线（Planner→Rewriter→Tutor）生成知识点、测验、练习、讲义。
+- 知识库：创建/选择库，上传 TXT/PDF/DOCX/PPTX；检索严格限定在当前库（向量召回后二次过滤）。
+- 测验与评分：生成测验会话、提交作答、返回得分与诊断；会话可恢复。
+- 时间线与行动：事件记录、AI 推荐写入时间线，可拖拽排序；支持绑定行动状态。
+- 打印：讲义视图一键打印知识点/题目/练习。
+- 会话与登录：Session+CSRF，前端缓存登录态；接口 401 自动清理并要求重新登录。
 
 ## 4. 非功能需求
-- **性能**：生成/测验请求异步执行；前端轮询间隔 4s；列表和滚动区域限制高度防止长列表卡顿。
-- **兼容性**：Chrome/Edge 最新版；Node 18+/Python 3.10+。
-- **可维护性**：前后端分层清晰，提示模板集中于 `src/agents/prompts.py`；API 客户端集中于 `webapp/src/services/api.ts`。
-- **可国际化**：当前强制中文；保留英文键名方便后续 i18n。
+- 语言：默认简体中文；接口携带 `Accept-Language: zh-CN`。
+- 性能：前端轮询任务状态 4s 间隔；长列表设置滚动高度。
+- 兼容性：Chrome/Edge 最新版，Node 18+，Python 3.10+。
+- 数据隔离：用户级隔离的知识库/课程/测验/推荐。
 
 ## 5. 约束与假设
-- 模型需支持按照 prompt/locale 返回中文；若模型忽略 locale，则需在后端进一步约束或更换模型。
-- 知识库依赖本地向量库（默认 FAISS）；切换向量存储需适配 `src/kb/store.py`。
-- 浏览器存储用于缓存；清理浏览器数据会清除本地历史与去重标记。
-
-## 6. 验收要点
-- 生成的课程、测验、练习默认中文，无英文残留。
-- 知识库删除/清空可正常工作，生成任务仅引用选定知识库。
-- 测验会话可恢复，教练/讲义可正常打开；“课程已生成”提示不重复。***
+- 需提供可用的 LLM/Embedding API（配置 `API_KEY`、模型名）。
+- 向量存储默认本地 FAISS；替换存储需适配 `src/kb/store.py`。
+- 浏览器本地存储用于缓存任务/对话/测验会话，清理存储会丢失本地历史。***
