--- a/docs/详细设计.md
+++ b/docs/详细设计.md
@@ -1,68 +1,40 @@
-# ClassWeaver 详细设计（V2）
+# ClassWeaver 详细设计（V3）
 
-## 1. 架构概览
-- **前端**：Vue3 + Vite + Tailwind。页面：Home（工作台）、Knowledge、Coach、Take、Print、History。跨页状态通过 localStorage/sessionStorage 与 URL state 维持。
-- **后端**：Django REST Framework。主要模块：
-  - `src/agents/`：Planner / Rewriter / Tutor 多智能体逻辑与提示。
-  - `src/services/`：流水线 orchestrator、打印生成、推荐、评分、PPT 解析、知识检索。
-  - `src/kb/`：知识上传、切片、向量存储（FAISS）。
-  - `src/api/`：REST 视图与序列化，涵盖预课任务、知识库、测验、时间线、推荐。
-- **存储**：关系型数据库（PrestudyJob、LessonPlan、KnowledgeDocument/Chunk 等）+ 向量库（FAISS）。
+## 1. 架构
+- 前端：Vue 3 + Vite + Tailwind。页面：Home、Knowledge、Coach、Take、Print、History、Login/Register。状态通过 localStorage/sessionStorage 及 URL state 维持。
+- 后端：Django REST Framework。模块：
+  - `src/agents/`：Planner/Rewrite/Tutor 提示与调用。
+  - `src/kb/`：知识库上传、切片、向量存储（FAISS）。
+  - `src/api/`：REST 视图（预课、知识库、测验、时间线、推荐、鉴权）。
+  - `src/services/`：打印、PPT 解析、推荐、评分等。
+- 存储：MySQL + 本地向量库（FAISS）。索引文件位于 `data/`，已被忽略。
 
-## 2. 后端模块
-### 2.1 Agents
-- **Planner**：根据用户文本/PPT 和 RAG 结果生成知识点、术语、测验草案；提示中强制中文输出。校验模型输出（Pydantic），补全空缺选项文案。
-- **Rewriter**：精炼测验题目与选项，保持答案不变；用户 prompt 前置中文要求。
-- **Tutor**：生成练习、回顾与跟进问题；同样强制中文。
-- **Pipeline**：在 `services/pipeline.py` 中协调多个 Agent，写入 `PrestudyJob` 结果、打印数据。
+## 2. 模块与接口
+- 预课：`/api/prestudy/from-text|from-ppt` 创建任务；`/api/prestudy/<id>` 取结果；`/api/jobs/<id>` 轮询状态。
+- 知识库：`/api/kb/bases/` 列表/创建/删除库；`/api/kb/upload/` 上传；`/api/kb/search/` 检索；`/api/kb/documents/` 列表/删除；`/api/kb/documents/<doc_id>/` 删除单个。
+- 测验：`/api/quiz/start` 生成会话；`/api/quiz/submit` 评分。
+- 时间线：`/api/lesson/<plan_id>/timeline` 获取事件；`/api/lesson/<plan_id>/events/` 记录事件。
+- 推荐：`/api/recommendations/` 生成行动建议。
+- 鉴权：`/api/auth/register|login|logout|me`，Session+CSRF。
 
-### 2.2 API 层
-- `prestudy/from-text|from-ppt`：创建任务，入参可包含 `doc_ids`，作业入队，返回 JobTicket。
-- `prestudy/<id>`：返回最终结果与 printable。
-- `jobs/<id>`：轮询任务状态。
-- `quiz/start|submit`：按现有 Job 生成测验会话与评分。
-- `kb/upload|search|documents`：知识库上传、检索、列出；`DELETE /api/kb/documents/<doc_id>/` 或 `DELETE /api/kb/documents/` 支持删除单个或清空。
-- `lesson/<plan_id>/timeline|events`：时间线查询与事件记录。
-- `recommendations/`：行动推荐。
-
-### 2.3 服务层
-- **printable**：从 `final_json` 生成可打印结构。
-- **ppt**：解析 PPTX，提取文本与图片。
-- **recommendation**：根据测验/课程生成行动建议。
-- **scoring**：测验评分，统计得分与详细正确性。
-
-## 3. 前端设计
-- **HomeView**：核心工作台，包含对话、上传、状态、行动指南、时间线、知识点/测验预览；对话记录、任务状态、提示去重存储于 localStorage/sessionStorage。
-- **KnowledgeView**：知识库上传/选择/搜索，新增删除单个与清空按钮。
-- **CoachView**：基于课程结果与时间线生成场景导航，可一键发起测验或返回工作台。
-- **TakeView**：测验答题与结果展示，会话与题目存于 sessionStorage，支持恢复。
-- **PrintView**：打印知识点/术语/测验/练习。
-- **HistoryView**：展示最近任务与对话，可本地清空。
-- **API 客户端**：`webapp/src/services/api.ts` 统一注入 `Accept-Language: zh-CN`、locale 以及知识库删除接口。
+## 3. 关键实现
+- 知识库检索：上传切片入库与向量；检索时先大范围召回，再按 base/doc 过滤，保证只返回当前库。
+- 任务流水线：Planner→Rewriter→Tutor，输出知识点、测验、练习、printable；结果写入 `PrestudyJob` 与 `LessonPlan`。
+- 时间线：事件与推荐写入 `LessonEvent`，前端单列滚动，卡片拖拽时整块移动并重排顺序。
+- 登录态：前端缓存用户，任意接口 401 时清空缓存，路由守卫跳转登录。
 
 ## 4. 数据模型（核心）
-- `PrestudyJob`：状态、源文本/PPT、planner_json/final_json、lesson_plan 关联。
-- `LessonPlan`：课程结构、笔记；关联 `LessonEvent` 时间线。
-- `KnowledgeDocument` / `KnowledgeChunk`：知识库及切片与向量。
-- `QuizSession` / `QuizAnswer`：测验会话与结果记录。
+- `KnowledgeBase` / `KnowledgeDocument` / `KnowledgeChunk`
+- `PrestudyJob` / `LessonPlan` / `LessonEvent`
+- `QuizSession` / `QuizAnswer`
+- `RecommendationTask`
 
-## 5. 流程时序（简述）
-1) 前端提交文本/PPT + doc_ids → `/api/prestudy/...` → 创建 Job → 入队执行。
-2) Pipeline 调用 Planner/RAG → Rewriter → Tutor → 持久化（final_json/printable/lesson_plan）。
-3) 前端轮询 `/api/jobs/<id>` → 完成后拉取 `/api/prestudy/<id>`，写入本地存储，播报一次系统消息。
-4) 测验：`/api/quiz/start` 生成会话 → 前端答题 → `/api/quiz/submit` 评分。
-5) 行动与时间线：`/api/recommendations` 获取建议；`/api/lesson/<plan>/events/` 记录事件、同步状态。
+## 5. 前端要点
+- API 客户端统一注入 `Accept-Language: zh-CN`，携带 CSRF；401 时清理登录缓存。
+- 本地存储：任务/对话在 localStorage，测验会话与提醒去重在 sessionStorage。
+- 时间线滚动区设定最小高度，拖拽时高亮 ring/scale。
 
-## 6. 中文化与去重策略
-- Agent 提示和用户 prompt 强制说明“所有文本使用简体中文”。
-- 前端请求默认 `Accept-Language: zh-CN`，并在关键接口传递 `locale: "zh-CN"`。
-- “课程已生成”提示通过 sessionStorage 记录已播报 job_id，避免重复。
-
-## 7. 依赖与环境
-- 后端：Python 3.10+，Django/DRF，Pydantic，FAISS（或替代向量库），OpenAI/Qwen/DeepSeek SDK。
-- 前端：Node 18+，Vite 5，Vue 3，Tailwind。
-
-## 8. 测试与验证
-- 前端：`npm run build`（已通过）验证构建。
-- 后端：`pytest -q`（当前环境缺少 Django/DRF/openai 依赖会报错；需安装 requirements 后运行）。
-- 建议补充：知识库删除接口的集成测试、Pipeline 中文化回归用例、Action/Timeline 状态持久化单测。***
+## 6. 部署与配置
+- 环境变量：MySQL 连接、`API_KEY`、模型名、FAISS 索引路径。
+- 静态资源：前端 `npm run build` 生成 dist，可由 Django 或前置静态服务器托管。
+- 安全：默认未启用 Django admin；仅 Session 认证，未暴露 token。***
